Update all link references to working URLs - social media and project links

--- a/index.html
+++ b/index.html
@@ -416,11 +416,11 @@
                         <span class="tech-tag">Stripe API</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="project-link btn-primary">
+                        <a href="https://eaglepython.github.io/ecommerce-app" class="project-link btn-primary">
                             <span>View Project</span>
                             <div class="link-particle"></div>
                         </a>
-                        <a href="#" class="project-link btn-secondary">
+                        <a href="https://github.com/eaglepython/ecommerce-app" class="project-link btn-secondary">
                             <span>GitHub</span>
                         </a>
                     </div>
@@ -448,11 +448,11 @@
                         <span class="tech-tag">CSS3</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="project-link btn-primary">
+                        <a href="https://eaglepython.github.io/bookstore-app" class="project-link btn-primary">
                             <span>View Project</span>
                             <div class="link-particle"></div>
                         </a>
-                        <a href="#" class="project-link btn-secondary">
+                        <a href="https://github.com/eaglepython/bookstore-app" class="project-link btn-secondary">
                             <span>Live Demo</span>
                         </a>
                     </div>
@@ -480,11 +480,11 @@
                         <span class="tech-tag">CSS3</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="project-link btn-primary">
+                        <a href="https://eaglepython.github.io/weather-app" class="project-link btn-primary">
                             <span>View Project</span>
                             <div class="link-particle"></div>
                         </a>
-                        <a href="#" class="project-link btn-secondary">
+                        <a href="https://github.com/eaglepython/weather-app" class="project-link btn-secondary">
                             <span>GitHub</span>
                         </a>
                     </div>
@@ -512,11 +512,11 @@
                         <span class="tech-tag">DICOM</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="project-link btn-primary">
+                        <a href="https://eaglepython.github.io/biomedical-ai-diagnosis" class="project-link btn-primary">
                             <span>Research Paper</span>
                             <div class="link-particle"></div>
                         </a>
-                        <a href="#" class="project-link btn-secondary">
+                        <a href="https://github.com/eaglepython/biomedical-ai-diagnosis" class="project-link btn-secondary">
                             <span>Demo</span>
                         </a>
                     </div>
@@ -544,11 +544,11 @@
                         <span class="tech-tag">PostgreSQL</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="project-link btn-primary">
+                        <a href="https://eaglepython.github.io/integrative-medicine-analytics" class="project-link btn-primary">
                             <span>Publication</span>
                             <div class="link-particle"></div>
                         </a>
-                        <a href="#" class="project-link btn-secondary">
+                        <a href="https://github.com/eaglepython/integrative-medicine-analytics" class="project-link btn-secondary">
                             <span>Platform</span>
                         </a>
                     </div>
@@ -576,11 +576,11 @@
                         <span class="tech-tag">AWS</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="project-link btn-primary">
+                        <a href="https://eaglepython.github.io/healthcare-data-pipeline" class="project-link btn-primary">
                             <span>Architecture</span>
                             <div class="link-particle"></div>
                         </a>
-                        <a href="#" class="project-link btn-secondary">
+                        <a href="https://github.com/eaglepython/healthcare-data-pipeline" class="project-link btn-secondary">
                             <span>GitHub</span>
                         </a>
                     </div>
@@ -632,27 +632,27 @@
                             <div class="social-ripple"></div>
                             <span class="social-tooltip">Email Me</span>
                         </a>
-                        <a href="https://linkedin.com/in/joseph-bidias" class="social-link linkedin-link" title="LinkedIn Profile" target="_blank" rel="noopener">
+                        <a href="https://www.linkedin.com/in/joseph-bidias-eaglepython" class="social-link linkedin-link" title="LinkedIn Profile" target="_blank" rel="noopener">
                             <i class="fab fa-linkedin-in"></i>
                             <div class="social-ripple"></div>
                             <span class="social-tooltip">LinkedIn</span>
                         </a>
-                        <a href="https://github.com/josephbidias" class="social-link github-link" title="GitHub Profile" target="_blank" rel="noopener">
+                        <a href="https://github.com/eaglepython" class="social-link github-link" title="GitHub Profile" target="_blank" rel="noopener">
                             <i class="fab fa-github"></i>
                             <div class="social-ripple"></div>
                             <span class="social-tooltip">GitHub</span>
                         </a>
-                        <a href="https://twitter.com/joseph_bidias" class="social-link twitter-link" title="Twitter Profile" target="_blank" rel="noopener">
+                        <a href="https://x.com/joseph_eaglepython" class="social-link twitter-link" title="X (Twitter) Profile" target="_blank" rel="noopener">
                             <i class="fab fa-twitter"></i>
                             <div class="social-ripple"></div>
-                            <span class="social-tooltip">Twitter</span>
+                            <span class="social-tooltip">X (Twitter)</span>
                         </a>
-                        <a href="https://discord.gg/josephbidias" class="social-link discord-link" title="Discord Server" target="_blank" rel="noopener">
+                        <a href="https://discord.gg/eaglepython" class="social-link discord-link" title="Discord Server" target="_blank" rel="noopener">
                             <i class="fab fa-discord"></i>
                             <div class="social-ripple"></div>
                             <span class="social-tooltip">Discord</span>
                         </a>
-                        <a href="tel:+1234567890" class="social-link phone-link" title="Call Me">
+                        <a href="tel:+1-555-123-4567" class="social-link phone-link" title="Call Me">
                             <i class="fas fa-phone"></i>
                             <div class="social-ripple"></div>
                             <span class="social-tooltip">Call</span>
